Upgraded fonts, beginnings of new landing page, removed obsolete files, added icon for tag

--- a/frontend/core/src/main/webapp/landing/download.html
+++ b/frontend/core/src/main/webapp/landing/download.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="extended mind - next generation productivity">
+  <meta name="description" content="extended mind &ndash; task and note organizer that keeps you zen">
   <title>extended mind</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
   <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-touch-icon-57x57.png">
@@ -26,13 +26,15 @@
   <meta name="msapplication-TileImage" content="favicon/mstile-144x144.png">
 
   <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    if (document.location.hostname.search("ext.md") !== -1) {
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-    ga('create', 'UA-44203690-1', 'auto');
-    ga('send', 'pageview');
+      ga('create', 'UA-44203690-1', 'auto');
+      ga('send', 'pageview');
+    }
   </script>
 
   <style type="text/css">
