--- a/frontend/core/src/main/webapp/static/app/main/omnibarEditor.html
+++ b/frontend/core/src/main/webapp/static/app/main/omnibarEditor.html
@@ -58,7 +58,7 @@
         </a>
         <div ng-if="keywords && keywords.length" class="group-symmetrical--middle">
           <a href id="editorFooterExpandLink" class="link" swiper-click="toggleExpand()">
-            <span id="editorFooterExpandText">#</span>
+            <span id="editorFooterExpandText" class="icon-tag"></span>
           </a>
         </div>
         <a href ng-hide="footerExpanded" class="group-symmetrical--right link" swiper-click="convertToNote()">
