--- a/frontend/core/src/main/webapp/static/app/tasks/taskListItemAdd.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskListItemAdd.html
@@ -16,7 +16,7 @@
   <div class="group-mixed--right">
     <a href class="link-navigation onboarding-hide" editable-field-deactivate
       swiper-click="openTaskEditor(newItem)">
-      <span class="text-navigation-forward"></span>
+      <span class="text-navigation-forward without-text"></span>
     </a>
   </div>
 </form>
