--- a/frontend/core/src/main/webapp/static/app/tasks/tasksContexts.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksContexts.html
@@ -14,7 +14,7 @@
         </div>
         <div class="group-mixed--right">
           <a href editable-field-deactivate swiper-click="openEditor('tag', newItem)">
-            <span class="text-navigation-forward"></span>
+            <span class="text-navigation-forward without-text"></span>
           </a>
         </div>
       </form>
