--- a/frontend/core/src/main/webapp/landing/index.html
+++ b/frontend/core/src/main/webapp/landing/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="extended mind - next generation productivity">
+  <meta name="description" content="extended mind &ndash; task and note organizer that keeps you zen">
   <title>extended mind</title>
 
   <link rel="stylesheet" href="bootstrap.min.css"/>
@@ -30,193 +30,37 @@
   <meta name="application-name" content="extended mind">
 
   <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    if (document.location.hostname.search("ext.md") !== -1) {
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-    ga('create', 'UA-44203690-1', 'auto');
-    ga('send', 'pageview');
+      ga('create', 'UA-44203690-1', 'auto');
+      ga('send', 'pageview');
 
-    var trackSignupLink = function(type) {
-       ga('send', 'event', 'signup', 'click', type, {'hitCallback':
-         function () {
-         document.location = 'https://ext.md';
-         }
-       });
+      var trackBegin = function() {
+        ga('send', 'event', {
+            'category': 'begin',
+            'action': 'click',
+            'hitCallback': function() {
+              document.location = 'https://ext.md/begin';
+            }
+          }
+        );
+      };
+    }else{
+      var trackBegin = function() {
+        console.log("trackBegin");
+      };
+      //<a href="https://ext.md" class="button" onclick="trackBegin(); return false;"><span>sign up for beta now</span></a>
+      //<a href="http://www.extendedmind.org" target="_blank">blog</a> | <a href="https://www.facebook.com/extmd" target="_blank">facebook</a> | <a href="https://twitter.com/extmd" target="_blank">twitter</a> | <a href="mailto:info@ext.md">contact</a> | <a href="https://ext.md"><b>log in</b></a>
     }
   </script>
 </head>
 
 <body>
 
-  <div class="page-header links">
-    <a href="http://www.extendedmind.org" target="_blank">blog</a> | <a href="https://www.facebook.com/extmd" target="_blank">facebook</a> | <a href="https://twitter.com/extmd" target="_blank">twitter</a> | <a href="mailto:info@ext.md">contact</a> | <a href="https://ext.md"><b>log in</b></a>
-  </div>
-
-  <div class="container">
-
-    <div class="row col-md-12 separator-small"></div>
-
-    <div class="row">
-      <div class="col-md-5 col-md-push-7 phone">
-        <img class="hide-mobile" src="img/phone-empty.png"/>
-      </div>
-      <div class="col-md-6 col-md-pull-5 lean-center">
-        <p>
-          <img src="logoname.png"/>
-          <br/>
-          <div class="slogan">
-            <b>next generation</b> productivity
-          </div>
-        </p>
-        <p>
-          <a href="#" class="button" onclick="trackSignupLink('upper'); return false;"><span>sign up for beta now</span></a><br/>
-        </p>
-        <p class="first-paragraph">
-          extended mind is a productivity app that helps
-          you manage your tasks and thoughts as easily
-          as if it was an extension to your biological mind.
-        </p>
-        <p>
-          it is <b>simple</b>, <b>fast</b> and <b>focused</b>.
-        </p>
-      </div>
-    </div>
-
-    <div class="row col-md-12 separator"></div>
-
-    <div class="row">
-      <div class="col-md-4 phone">
-        <img src="img/phone-inbox.png"/>
-      </div>
-      <div class="col-md-8">
-        <h2>simple</h2>
-        <p>manage what you want to do or remember<br/>
-          &hellip;as intuitively as recalling it<br/>
-          &hellip;now, tomorrow or in three years
-        </p>
-        <p class="details">
-          the conscious mind can process only about 40 bits<br/>
-          of information in a second (Zimmermann 1989)
-        </p>
-      </div>
-    </div>
-
-    <div class="row col-md-12 separator"></div>
-
-    <div class="row">
-      <div class="col-md-5 col-md-push-7 phone">
-        <img src="img/phone-omnibar.png"/>
-      </div>
-
-      <div class="col-md-7 col-md-pull-5 lean-right">
-        <h2>fast</h2>
-        <p>capture what you want to remember<br/>
-          &hellip;instantly as you see or think of it<br/>
-          &hellip;wherever you are, whatever you do
-        </p>
-        <p class="details">
-          the non-conscious mind can  process<br/>
-          11,200,000 bits / s (Zimmermann 1989)
-        </p>
-      </div>
-
-    </div>
-
-    <div class="row col-md-12 separator"></div>
-
-    <div class="row">
-      <div class="col-md-4 phone">
-        <img src="img/phone-snooze.png"/>
-      </div>
-      <div class="col-md-8">
-        <h2>focused</h2>
-        <p>focus on the essential<br/>
-          &hellip;when you want to get things done<br/>
-          &hellip;what you want to remember
-        </p>
-        <p class="details">
-          the mind finds it difficult to reacquire its<br/>
-          focus after having to shift its attention<br/>
-          (Heylighen & Vidal 2008)
-        </p>
-      </div>
-    </div>
-
-    <div class="row col-md-12 separator"></div>
-
-    <div class="row">
-      <div class="col-md-5 col-md-push-7 phone">
-        <img src="img/phone-tasks.png"/>
-      </div>
-      <div class="col-md-7 col-md-pull-5 lean-right">
-        <h2>tasks</h2>
-        <p>tasks are things you want to do<br/>
-          &hellip;organize by date<br/>
-          &hellip;organize by context<br/>
-          &hellip;organize by list
-        </p>
-      </div>
-    </div>
-
-    <div class="row col-md-12 separator"></div>
-
-    <div class="row">
-      <div class="col-md-4 phone">
-        <img src="img/phone-notes.png"/>
-      </div>
-      <div class="col-md-8">
-        <h2>notes</h2>
-        <p>notes are things you want to remember<br/>
-          &hellip;organize by topic<br/>
-          &hellip;organize by keyword<br/>
-          &hellip;organize by list
-        </p>
-      </div>
-    </div>
-
-    <div class="row col-md-12 separator"></div>
-
-    <div class="row">
-      <div class="col-md-5 col-md-push-7 phone">
-        <img src="img/phone-cloud.png"/>
-      </div>
-      <div class="col-md-7 col-md-pull-5 lean-right">
-        <h2>everywhere</h2>
-        <p>your tasks and notes are stored<br/>
-          in the cloud, accessible from<br/>
-          every device, everywhere
-        </p>
-      </div>
-    </div>
-
-    <div class="row col-md-12 separator"></div>
-
-    <div class="row">
-      <div class="col-md-12 lean-center">
-        <h2>science-driven design</h2>
-        <p class="last-paragraph">thousands of research papers used to validate
-        very focused, intuitive ui and data management
-        practices, <b>designed to integrate the biological
-        and the digital mind</b><br/><br/>
-
-        <a href="https://ext.md" class="button" onclick="trackSignupLink('lower'); return false;"><span>sign up for beta now</span></a><br/>
-        </p>
-      </div>
-    </div>
-
-    <div class="row col-md-12 separator-small"></div>
-
-    <div class="row">
-      <div class="col-md-12 lean-center links">
-        <a href="http://www.extendedmind.org" target="_blank">blog</a> | <a href="https://www.facebook.com/extmd" target="_blank">facebook</a> | <a href="https://twitter.com/extmd" target="_blank">twitter</a> | <a href="mailto:info@ext.md">contact</a> | <a href="https://ext.md"><b>log in</b></a>
-      </div>
-    </div>
-
-    <div class="row col-md-12 separator-small"></div>
-
-  </div>
 
 </body>
 </html>
