--- a/frontend/core/src/main/webapp/static/app/lists/listListItemAdd.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listListItemAdd.html
@@ -15,7 +15,7 @@
   </div>
   <div class="group-mixed--right">
     <a href class="onboarding-hide" editable-field-deactivate swiper-click="openEditor('list', newItem)">
-      <span class="text-navigation-forward"></span>
+      <span class="text-navigation-forward without-text"></span>
     </a>
   </div>
 </form>
