--- a/frontend/core/src/main/webapp/static/app/main/inbox.html
+++ b/frontend/core/src/main/webapp/static/app/main/inbox.html
@@ -15,7 +15,7 @@
         </div>
         <div class="group-mixed--right">
           <a href editable-field-deactivate swiper-click="openEditor('item', newItem)">
-            <span class="text-navigation-forward"></span>
+            <span class="text-navigation-forward without-text"></span>
           </a>
         </div>
       </form>
