Agenda calendar name and event location position tweaks.

--- a/frontend/core/src/main/webapp/static/app/focus/focusTasks.html
+++ b/frontend/core/src/main/webapp/static/app/focus/focusTasks.html
@@ -354,10 +354,12 @@
                   </div>
                   <div class="group-mixed--middle">
                     <span ng-bind="agendaEvent.title" class="text-agenda--title" clamp=2></span>
+                    <div>
                     <span class="text-details"
                       ng-bind="agendaEvent.calendarName + (agendaEvent.eventLocation ? ': ' + agendaEvent.eventLocation : '')"
                       clamp=1>
                     </span>
+                    </div>
                   </div>
                   <div ng-if="agendaEvent.rrule" class="group-mixed--right">
                     <span class="icon-sort small"></span>
@@ -400,10 +402,12 @@
                   </div>
                   <div class="group-mixed--middle">
                     <span ng-bind="agendaEvent.title" class="text-agenda--title" clamp=2></span>
+                    <div>
                     <span class="text-details"
                       ng-bind="agendaEvent.calendarName + (agendaEvent.eventLocation ? ': ' + agendaEvent.eventLocation : '')"
                       clamp=1>
                     </span>
+                    </div>
                   </div>
                   <div ng-if="agendaEvent.rrule" class="group-mixed--right">
                     <span class="icon-sort small"></span>
@@ -446,10 +450,12 @@
                   </div>
                   <div class="group-mixed--middle">
                     <span ng-bind="agendaEvent.title" class="text-agenda--title" clamp=2></span>
+                    <div>
                     <span class="text-details"
                       ng-bind="agendaEvent.calendarName + (agendaEvent.eventLocation ? ': ' + agendaEvent.eventLocation : '')"
                       clamp=1>
                     </span>
+                    </div>
                   </div>
                   <div ng-if="agendaEvent.rrule" class="group-mixed--right">
                     <span class="icon-sort small"></span>
@@ -492,10 +498,12 @@
                   </div>
                   <div class="group-mixed--middle">
                     <span ng-bind="agendaEvent.title" class="text-agenda--title" clamp=2></span>
+                    <div>
                     <span class="text-details"
                       ng-bind="agendaEvent.calendarName + (agendaEvent.eventLocation ? ': ' + agendaEvent.eventLocation : '')"
                       clamp=1>
                     </span>
+                    </div>
                   </div>
                   <div ng-if="agendaEvent.rrule" class="group-mixed--right">
                     <span class="icon-sort small"></span>
@@ -538,10 +546,12 @@
                   </div>
                   <div class="group-mixed--middle">
                     <span ng-bind="agendaEvent.title" class="text-agenda--title" clamp=2></span>
+                    <div>
                     <span class="text-details"
                       ng-bind="agendaEvent.calendarName + (agendaEvent.eventLocation ? ': ' + agendaEvent.eventLocation : '')"
                       clamp=1>
                     </span>
+                    </div>
                   </div>
                   <div ng-if="agendaEvent.rrule" class="group-mixed--right">
                     <span class="icon-sort small"></span>
