--- a/frontend/core/src/main/webapp/static/app/focus/focusTasks.html
+++ b/frontend/core/src/main/webapp/static/app/focus/focusTasks.html
@@ -354,7 +354,7 @@
                   </div>
                   <div class="group-mixed--middle">
                     <span ng-bind="agendaEvent.title" class="text-agenda--title" clamp=2></span>
-                    <span class="text-details"
+                    <span class="text-details text-agenda--details"
                       ng-bind="agendaEvent.calendarName + (agendaEvent.eventLocation ? ': ' + agendaEvent.eventLocation : '')"
                       clamp=1>
                     </span>
@@ -400,7 +400,7 @@
                   </div>
                   <div class="group-mixed--middle">
                     <span ng-bind="agendaEvent.title" class="text-agenda--title" clamp=2></span>
-                    <span class="text-details"
+                    <span class="text-details text-agenda--details"
                       ng-bind="agendaEvent.calendarName + (agendaEvent.eventLocation ? ': ' + agendaEvent.eventLocation : '')"
                       clamp=1>
                     </span>
@@ -446,7 +446,7 @@
                   </div>
                   <div class="group-mixed--middle">
                     <span ng-bind="agendaEvent.title" class="text-agenda--title" clamp=2></span>
-                    <span class="text-details"
+                    <span class="text-details text-agenda--details"
                       ng-bind="agendaEvent.calendarName + (agendaEvent.eventLocation ? ': ' + agendaEvent.eventLocation : '')"
                       clamp=1>
                     </span>
@@ -492,7 +492,7 @@
                   </div>
                   <div class="group-mixed--middle">
                     <span ng-bind="agendaEvent.title" class="text-agenda--title" clamp=2></span>
-                    <span class="text-details"
+                    <span class="text-details text-agenda--details"
                       ng-bind="agendaEvent.calendarName + (agendaEvent.eventLocation ? ': ' + agendaEvent.eventLocation : '')"
                       clamp=1>
                     </span>
@@ -538,7 +538,7 @@
                   </div>
                   <div class="group-mixed--middle">
                     <span ng-bind="agendaEvent.title" class="text-agenda--title" clamp=2></span>
-                    <span class="text-details"
+                    <span class="text-details text-agenda--details"
                       ng-bind="agendaEvent.calendarName + (agendaEvent.eventLocation ? ': ' + agendaEvent.eventLocation : '')"
                       clamp=1>
                     </span>
