--- a/frontend/core/src/main/webapp/static/app/focus/focusTasks.html
+++ b/frontend/core/src/main/webapp/static/app/focus/focusTasks.html
@@ -326,7 +326,8 @@
         swiper-slide-duplicate="true">
           <div class="container-content" ng-class="daySlides[2].pastDate && 'past-date'"
             list="getTasksArray('date', {date: daySlides[2].info, pastDate: daySlides[2].pastDate})"
-            list-bounded="true">
+            list-options="{isBounded: isAgendaVisible, registerModeChanged: registerAgendaVisibilityChangedCallback,
+            id: 'focus/tasks/rightDuplicate'}">
 
             <div ng-hide="datepickerVisible" class="group-mixed heading">
               <div class="group-mixed--middle" swiper-click="openDatepicker(daySlides[2].info)">
@@ -340,9 +341,12 @@
             <div class="animate-list-item-leave"
               ng-repeat="task in getVisibleArray(getFullArray, currentListLimitTo) track by task.trans.uuid"
               list-item ng-include="urlBase + 'app/tasks/taskListItem.html'"></div>
-            <div list-prompt="tasks" list-prompt-infos="listInfos" list-prompt-load-more="addMoreItems()"
+            <div list-prompt="tasks" list-prompt-infos="listInfos" list-prompt-load-more="showAgenda"
+              list-prompt-load-more-fn="addMoreItems()"
               list-prompt-hide="[listItemAddActive, onboardingInProgress, daySlidesInfosCleared]">
             </div>
+
+            <!-- <button ng-click="clear()">klar</button> -->
 
             <a href ng-if="showAgenda && daySlides[2].info !== null" ng-hide="daySlidesInfosCleared"
               class="link agenda" ng-click="openCalendar(daySlides[2].info)" list-bottom>
@@ -373,7 +377,8 @@
         <div class="swiper-slide" swiper-slide="focus/tasks/left" slide-index="1" swiper-slide-loop-start="true">
           <div class="container-content" ng-class="daySlides[0].pastDate && 'past-date'"
             list="getTasksArray('date', {date: daySlides[0].info, pastDate: daySlides[0].pastDate})"
-            list-bounded="true">
+            list-options="{isBounded: isAgendaVisible, registerModeChanged: registerAgendaVisibilityChangedCallback,
+            id: 'focus/tasks/left'}">
 
             <div ng-hide="datepickerVisible" class="group-mixed heading">
               <div class="group-mixed--middle" swiper-click="openDatepicker(daySlides[0].info)">
@@ -387,9 +392,12 @@
             <div class="animate-list-item-leave"
               ng-repeat="task in getVisibleArray(getFullArray, currentListLimitTo) track by task.trans.uuid"
               list-item ng-include="urlBase + 'app/tasks/taskListItem.html'"></div>
-            <div list-prompt="tasks" list-prompt-infos="listInfos" list-prompt-load-more="addMoreItems()"
+            <div list-prompt="tasks" list-prompt-infos="listInfos" list-prompt-load-more="showAgenda"
+              list-prompt-load-more-fn="addMoreItems()"
               list-prompt-hide="[listItemAddActive, onboardingInProgress, daySlidesInfosCleared]">
             </div>
+
+            <!-- <button ng-click="clear()">klar</button> -->
 
             <a href ng-if="showAgenda && daySlides[0].info !== null" ng-hide="daySlidesInfosCleared"
               class="link agenda" ng-click="openCalendar(daySlides[0].info)" list-bottom>
@@ -420,7 +428,8 @@
         <div class="swiper-slide" swiper-slide="focus/tasks/middle" slide-index="2">
           <div class="container-content" ng-class="daySlides[1].pastDate && 'past-date'"
             list="getTasksArray('date', {date: daySlides[1].info, pastDate: daySlides[1].pastDate})"
-            list-bounded="true">
+            list-options="{isBounded: isAgendaVisible, registerModeChanged: registerAgendaVisibilityChangedCallback,
+            id: 'focus/tasks/middle'}">
 
             <div ng-hide="datepickerVisible" class="group-mixed heading">
               <div class="group-mixed--middle" swiper-click="openDatepicker(daySlides[1].info)">
@@ -434,9 +443,12 @@
             <div class="animate-list-item-leave"
               ng-repeat="task in getVisibleArray(getFullArray, currentListLimitTo) track by task.trans.uuid"
               list-item ng-include="urlBase + 'app/tasks/taskListItem.html'"></div>
-            <div list-prompt="tasks" list-prompt-infos="listInfos" list-prompt-load-more="addMoreItems()"
+            <div list-prompt="tasks" list-prompt-infos="listInfos" list-prompt-load-more="showAgenda"
+              list-prompt-load-more-fn="addMoreItems()"
               list-prompt-hide="[listItemAddActive, onboardingInProgress, daySlidesInfosCleared]">
             </div>
+
+            <!-- <button ng-click="clear()">klar</button> -->
 
             <a href ng-if="showAgenda && daySlides[1].info !== null" ng-hide="daySlidesInfosCleared"
               class="link agenda" ng-click="openCalendar(daySlides[1].info)" list-bottom>
@@ -467,7 +479,8 @@
         <div class="swiper-slide" swiper-slide="focus/tasks/right" slide-index="3">
           <div class="container-content" ng-class="daySlides[2].pastDate && 'past-date'"
             list="getTasksArray('date', {date: daySlides[2].info, pastDate: daySlides[2].pastDate})"
-            list-bounded="true">
+            list-options="{isBounded: isAgendaVisible, registerModeChanged: registerAgendaVisibilityChangedCallback,
+            id: 'focus/tasks/right'}">
 
             <div ng-hide="datepickerVisible" class="group-mixed heading">
               <div class="group-mixed--middle" swiper-click="openDatepicker(daySlides[2].info)">
@@ -481,9 +494,12 @@
             <div class="animate-list-item-leave"
               ng-repeat="task in getVisibleArray(getFullArray, currentListLimitTo) track by task.trans.uuid"
               list-item ng-include="urlBase + 'app/tasks/taskListItem.html'"></div>
-            <div list-prompt="tasks" list-prompt-infos="listInfos" list-prompt-load-more="addMoreItems()"
+            <div list-prompt="tasks" list-prompt-infos="listInfos" list-prompt-load-more="showAgenda"
+              list-prompt-load-more-fn="addMoreItems()"
               list-prompt-hide="[listItemAddActive, onboardingInProgress, daySlidesInfosCleared]">
             </div>
+
+            <!-- <button ng-click="clear()">klar</button> -->
 
             <a href ng-if="showAgenda && daySlides[2].info !== null" ng-hide="daySlidesInfosCleared"
               class="link agenda" ng-click="openCalendar(daySlides[2].info)" list-bottom>
@@ -514,7 +530,8 @@
         <div class="swiper-slide" swiper-slide="focus/tasks/leftDuplicate" slide-index="4" swiper-slide-duplicate="true">
           <div class="container-content" ng-class="daySlides[0].pastDate && 'past-date'"
             list="getTasksArray('date', {date: daySlides[0].info, pastDate: daySlides[0].pastDate})"
-            list-bounded="true">
+            list-options="{isBounded: isAgendaVisible, registerModeChanged: registerAgendaVisibilityChangedCallback,
+            id: 'focus/tasks/leftDuplicate'}">
 
             <div ng-hide="datepickerVisible" class="group-mixed heading">
               <div class="group-mixed--middle" swiper-click="openDatepicker(daySlides[0].info)">
@@ -528,9 +545,12 @@
             <div class="animate-list-item-leave"
               ng-repeat="task in getVisibleArray(getFullArray, currentListLimitTo) track by task.trans.uuid"
               list-item ng-include="urlBase + 'app/tasks/taskListItem.html'"></div>
-            <div list-prompt="tasks" list-prompt-infos="listInfos" list-prompt-load-more="addMoreItems()"
+            <div list-prompt="tasks" list-prompt-infos="listInfos" list-prompt-load-more="showAgenda"
+              list-prompt-load-more-fn="addMoreItems()"
               list-prompt-hide="[listItemAddActive, onboardingInProgress, daySlidesInfosCleared]">
             </div>
+
+            <!-- <button ng-click="clear()">klar</button> -->
 
             <a href ng-if="showAgenda && daySlides[0].info !== null" ng-hide="daySlidesInfosCleared"
               class="link agenda" ng-click="openCalendar(daySlides[0].info)" list-bottom>
